<resources>
    <string name="app_name">MovClase20May</string>
    <string name="principal">Principal</string>
    <string name="galeria">Galeria</string>
    <string name="efecto">Reproducir efecto</string>
    <string name="musica">Reproducir música</string>
    <string name="control">Controles de reprodución</string>
    <string name="volumen">Volumen</string>
    <string name="tiempo">Tiempo 00:00</string>
    <string name="formulario">Formulario</string>
    <string name="correo">Correo electrónico</string>
    <string name="comentario">Comentario</string>
    <string name="enviar">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>