<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GaleriaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/galeria"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/btnEfecto"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/efecto" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/control" />

        <SeekBar
            android:id="@+id/sbReproduccion"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/volumen" />

        <SeekBar
            android:id="@+id/sbVolumen"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <TextView
            android:id="@+id/txtTiempo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/tiempo" />

        <Button
            android:id="@+id/btnMusica"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/musica" />
    </LinearLayout>
</FrameLayout>