<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/formulario"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/edtCorreo"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edtComentario"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/comentario"
            android:inputType="text" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/enviar" />

    </LinearLayout>
</FrameLayout>