<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="131dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/itmPrincipal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/baseline_add_home_24"
                android:text="@string/principal" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/itmGaleria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@android:drawable/ic_lock_silent_mode_off"
                android:text="@string/galeria" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/itmFormulario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@android:drawable/ic_dialog_email"
                android:text="@string/formulario" />

        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpVisor"
        android:layout_width="382dp"
        android:layout_height="578dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>